--- a/app/src/main/res/layout/personal_layout.xml
+++ b/app/src/main/res/layout/personal_layout.xml
@@ -35,13 +35,15 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:background="@drawable/click_fab"
-            android:src="@drawable/ic_art_track_white_24dp"
-            android:clickable="true" />
+            android:clickable="true"
+            android:src="@drawable/ic_art_track_white_24dp" />
 
         <TextView
             android:id="@+id/textSubject"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:fontFamily="sans-serif-light"
             android:text="@string/subjects"
             android:textAppearance="?android:attr/textAppearanceMedium" />
     </LinearLayout>
@@ -62,13 +64,15 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:background="@drawable/click_fab"
-            android:src="@drawable/ic_view_list"
-            android:clickable="true" />
+            android:clickable="true"
+            android:src="@drawable/ic_view_list" />
 
         <TextView
             android:id="@+id/textView6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:fontFamily="sans-serif-light"
             android:text="@string/methodics"
             android:textAppearance="?android:attr/textAppearanceMedium" />
     </LinearLayout>
@@ -104,6 +108,8 @@
             android:id="@+id/textView7"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:fontFamily="sans-serif-light"
             android:text="@string/notes"
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
@@ -119,17 +125,19 @@
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/fabHelp"
-            android:src="@drawable/ic_help_white_24dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:background="@drawable/click_fab"
-            android:clickable="true" />
+            android:clickable="true"
+            android:src="@drawable/ic_help_white_24dp" />
 
         <TextView
             android:id="@+id/textView8"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:fontFamily="sans-serif-light"
             android:text="@string/help"
             android:textAppearance="?android:attr/textAppearanceMedium" />
     </LinearLayout>
@@ -148,16 +156,18 @@
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/fabAbout"
             android:layout_width="wrap_content"
-            android:src="@drawable/ic_priority_high_white_24dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:background="@drawable/click_fab"
-            android:clickable="true" />
+            android:clickable="true"
+            android:src="@drawable/ic_priority_high_white_24dp" />
 
         <TextView
             android:id="@+id/textView9"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:fontFamily="sans-serif-light"
             android:text="@string/about"
             android:textAppearance="?android:attr/textAppearanceMedium" />
     </LinearLayout>
@@ -172,17 +182,19 @@
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/fabNew"
-            android:src="@drawable/ic_data_usage_white_24dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:background="@drawable/click_fab"
-            android:clickable="true" />
+            android:clickable="true"
+            android:src="@drawable/ic_data_usage_white_24dp" />
 
         <TextView
             android:id="@+id/textView10"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:fontFamily="sans-serif-light"
             android:text="@string/newpunkt"
             android:textAppearance="?android:attr/textAppearanceMedium" />
     </LinearLayout>
