--- a/app/src/main/res/layout/methodic_layout.xml
+++ b/app/src/main/res/layout/methodic_layout.xml
@@ -47,10 +47,23 @@
                 card_view:cardBackgroundColor="@color/card_color"
                 card_view:cardElevation="5dp">
 
-                <RelativeLayout
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+                    <Button
+                        android:id="@+id/buttonGame"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/click"
+                        android:clickable="true"
+                        android:text="Грати"
+                        android:textColor="@color/md_white_1000"
+                        android:layout_alignWithParentIfMissing="false"
+                        android:layout_alignParentTop="true"
+                        android:layout_toEndOf="@+id/methodicDescription"
+                        android:layout_marginTop="15dp"
+                        android:layout_gravity="center_horizontal" />
                     <TextView
                         android:id="@+id/methodicDescription"
                         android:layout_width="wrap_content"
@@ -59,13 +72,13 @@
                         android:layout_marginTop="10dp"
                         android:fontFamily="sans-serif-light"
                         android:text="Medium Text"
+                        android:layout_below="@id/buttonGame"
                         android:textAppearance="?android:attr/textAppearanceMedium"
                         android:textColor="@color/md_black_1000" />
 
                     <Button
                         android:id="@+id/checkButton"
                         android:layout_width="wrap_content"
-
                         android:layout_height="wrap_content"
                         android:layout_below="@+id/methodicDescription"
                         android:layout_centerHorizontal="true"
@@ -73,8 +86,9 @@
                         android:background="@drawable/click"
                         android:clickable="true"
                         android:text="@string/check"
-                        android:textColor="@color/md_white_1000" />
-                </RelativeLayout>
+                        android:textColor="@color/md_white_1000"
+                        android:layout_gravity="center_horizontal" />
+                </LinearLayout>
             </android.support.v7.widget.CardView>
         </RelativeLayout>
     </ScrollView>
