--- a/app/src/main/res/layout/notes_layout.xml
+++ b/app/src/main/res/layout/notes_layout.xml
@@ -17,7 +17,8 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/notesList"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:scrollIndicators="right" />
 
         <TextView
             android:layout_width="wrap_content"
