--- a/app/src/main/res/layout/subject_layout.xml
+++ b/app/src/main/res/layout/subject_layout.xml
@@ -4,12 +4,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true">
+
     <android.support.design.widget.AppBarLayout
         android:id="@+id/app_bar_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        android:fitsSystemWindows="true"/>
+        android:fitsSystemWindows="true"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -57,31 +59,31 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/notesList"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_below="@+id/headerTextLayout" />
-
-        <Spinner
-            android:id="@+id/statusSpinner"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignTop="@+id/statusTextView"
-            android:layout_toEndOf="@+id/statusTextView"
-            android:entries="@array/status_array"
-            android:fontFamily="sans-serif-light"
-            android:textAlignment="center" />
+            android:layout_height="wrap_content" />
 
 
     </RelativeLayout>
-
+    <Button
+        android:id="@+id/testButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/click"
+        android:clickable="true"
+        android:text="@string/check"
+        android:textColor="@color/md_white_1000"
+        app:layout_anchor="@id/headerTextLayout"
+        app:layout_anchorGravity="bottom|right|end"
+        android:visibility="visible" />
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/writeNoteButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
-        app:layout_anchorGravity="bottom|right|end"
+        android:layout_alignParentRight="true"
         android:src="@drawable/ic_border_color"
-        app:layout_anchor="@id/headerTextLayout" />
+        app:layout_anchor="@id/headerTextLayout"
+        app:layout_anchorGravity="bottom|right|end" />
+
+
 </android.support.design.widget.CoordinatorLayout>
